--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon --ext js,hbs src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +14,10 @@
     "nodemon": "^3.1.3"
   },
   "dependencies": {
+    "dayjs": "^1.11.11",
+    "handlebars": "^4.7.8",
     "koa": "^2.15.3",
-    "koa-route": "^4.0.1", 
+    "koa-route": "^4.0.1",
     "koa-websocket": "^7.0.0"
   }
 }
