--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "handlebars": "^4.7.8",
     "koa": "^2.15.3",
     "koa-route": "^4.0.1",
-    "koa-websocket": "^7.0.0"
+    "koa-websocket": "^7.0.0",
+    "sanitize-html": "^2.13.0"
   }
 }
